--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "antd": "^5.17.0",
+    "formik": "^2.4.6",
     "react": "^18.3.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.0",
     "react-redux": "^9.1.1",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
