--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
     "antd": "^5.17.0",
+    "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "react": "^18.3.0",
     "react-dom": "^18.2.0",
